src/objects/sysdiagram__c.object
<CustomObject>
    <fields>
        <fullName>definition__c</fullName>
        <label>definition</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>diagram_id__c</fullName>
        <label>diagram_id</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>principal_id__c</fullName>
        <label>principal_id</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>version__c</fullName>
        <label>version</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <label>sysdiagram</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>{!label} Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>sysdiagrams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>